--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="modal-body">
               <form id="w-form">
                   <div class="form-group">
-                      <label for="location">Location</label>
+                      <label for="location">Location (e.g. London, UK)</label>
                       <input type="text" id="location" class="form-control">
                   </div>
               </form>
