--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="locModalLabel">Input location</h5>
+              <h5 class="modal-title" id="locModalLabel">Enter location</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -43,8 +43,8 @@
             <div class="modal-body">
               <form id="w-form">
                   <div class="form-group">
-                      <label for="location">Location (e.g. Paris, FR)</label>
-                      <input type="text" id="location" class="form-control">
+                      <label for="location"></label>
+                      <input type="text" id="location" class="form-control" placeholder="e.g. Paris, FR">
                   </div>
               </form>
             </div>
